--- a/index.html
+++ b/index.html
@@ -14,19 +14,22 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">What you are is what you have been. What you'll be is what you do now.</span>
+            <span id="quote"></span>
             <i class="fas fa-quote-right"></i>
         </div>
         <div class="quote-author">
-            <span id="author">Buddha</span>
+            <span id="author"></span>
         </div>
         <!-- Buttons -->
-        <button class="twitterbutton" id="twitter" title="Tweet This!">
-            <i class="fab fa-twitter"></i>
-        </button>
-        <button class="new-quote">New Quote</button>
-
+        <div class="button-container">
+            <button class="twitterbutton" id="twitter" title="Tweet This!">
+                <i class="fab fa-twitter"></i>
+            </button>
+            <button class="new-quote" id="new-quote">New Quote</button>
+        </div>
     </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
