finished 1st project :P

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote Generator</title>
-    <link rel="icon" type="image/png" href="https://s2.googleusercontent.com/s2/favicons?domain=jacinto.design">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -28,6 +26,7 @@
             <button class="new-quote" id="new-quote">New Quote</button>
         </div>
     </div>
+    <p class="credits">Created & Developed by Nir Shubinsky <a href="#"><i class="fab fa-github">&nbsp;</i></a><a href="#"><i class="fab fa-linkedin"></i></a></p>
     <!-- Loader -->
     <div class="loader" id="loader"></div>
     <!-- Script -->
