--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button class="new-quote" id="new-quote">New Quote</button>
         </div>
     </div>
-    <p class="credits">Created & Developed by Nir Shubinsky <a href="https://github.com/NirShubinsky" target="_blank" title="GitHub"><i class="fab fa-github">&nbsp;</i></a><a href="#" title="Linkedln"><i class="fab fa-linkedin"></i></a></p>
+    <p class="credits">Created & Developed by Nir Shubinsky <a href="https://github.com/NirShubinsky" target="_blank" title="GitHub"><i class="fab fa-github">&nbsp;</i></a><a href="https://www.linkedin.com/in/nir-shubinsky-b7a176b1/" target="_blank" title="Linkedln"><i class="fab fa-linkedin"></i></a></p>
     <!-- Loader -->
     <div class="loader" id="loader"></div>
     <!-- Script -->
